Fix PMD errors.